--- a/BatteryWaveAnimation/build.gradle
+++ b/BatteryWaveAnimation/build.gradle
@@ -1,10 +1,11 @@
 plugins {
-    alias(libs.plugins.android.library)
+    id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
     namespace 'com.mrdeveloper.batterywaveanimation'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         minSdk 24
